# cdumay-http-client-rs

./: Cargo.toml  README.md
src/: client.rs  exceptions.rs  lib.rs
