[package]
name = "cdumay_http_client"
version = "0.1.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay-http-client-rs"
homepage =  "https://github.com/cdumay/cdumay-http-client-rs"
description = """
A REST HTTP with normalized exceptions
"""

[dependencies]
