[package]
name = "cdumay_rest_client"
version = "0.1.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay-rest-client-rs"
homepage =  "https://github.com/cdumay/cdumay-rest-client-rs"
description = """
A REST HTTP client with normalized exceptions
"""

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.11"