[package]
name = "cdumay_rest_client"
version = "0.1.0"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay-rest-client-rs"
homepage =  "https://github.com/cdumay/cdumay-rest-client-rs"
description = """
A REST HTTP client with normalized exceptions
"""

[dependencies]
futures = "0.1"
hyper = "0.11"
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.6"
